Backed out changeset 61808b1ff0a8 (bug 1555497) for reftest failure in chrome://reftest/content/xul/menulist-shrinkwrap-2.xul
UltraBlame original commit: 6d8b90fbdf93b42e6407f21b796f15f3a2aee90f

--- a/browser/components/places/content/places.css
+++ b/browser/components/places/content/places.css
@@ -54,6 +54,23 @@ index
 1
 ;
 }
+menupopup
+[
+placespopup
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+binding
+:
+none
+;
+}
 media
 (
 resolution
