--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -806,6 +806,32 @@ menupopup
 -
 moz
 -
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+popup
+.
+xml
+#
+popup
+"
+)
+;
+-
+moz
+-
 box
 -
 orient
@@ -2101,6 +2127,101 @@ border
 0
 !
 important
+;
+}
+menulist
+>
+menupopup
+>
+.
+popup
+-
+internal
+-
+box
+>
+.
+scrollbutton
+-
+up
+menulist
+>
+menupopup
+>
+.
+popup
+-
+internal
+-
+box
+>
+.
+arrowscrollbox
+-
+overflow
+-
+start
+-
+indicator
+menulist
+>
+menupopup
+>
+.
+popup
+-
+internal
+-
+box
+>
+.
+arrowscrollbox
+-
+overflow
+-
+end
+-
+indicator
+menulist
+>
+menupopup
+>
+.
+popup
+-
+internal
+-
+box
+>
+.
+scrollbutton
+-
+down
+{
+display
+:
+none
+;
+}
+menulist
+>
+menupopup
+>
+.
+popup
+-
+internal
+-
+box
+>
+.
+arrowscrollbox
+-
+scrollbox
+{
+overflow
+:
+auto
 ;
 }
 .
