--- a/toolkit/themes/osx/global/popup.css
+++ b/toolkit/themes/osx/global/popup.css
@@ -699,6 +699,22 @@ top
 2px
 ;
 }
+menulist
+>
+menupopup
+>
+.
+popup
+-
+internal
+-
+box
+{
+padding
+:
+0
+;
+}
 menupopup
 [
 customoptionstyling
